[NTP] Make local images override a synced background.

A locally uploaded image should override a synced background
until either a local action updates the background or a new
pref update arrives from Sync.

Bug: 916839
Change-Id: I05a4e98c03092bdd1856b9a7cd1c0da2580f045d
Reviewed-on: https://chromium-review.googlesource.com/c/1415792
Reviewed-by: Kristi Park <kristipark@chromium.org>
Commit-Queue: Kyle Milka <kmilka@chromium.org>
Cr-Commit-Position: refs/heads/master@{#626669}
Former-commit-id: 0d1b376e9d71c46951ffac3ea75f3df896f70170